--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,6 @@ after_success:
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
-  - docker tag firstimage YOUR_DOCKERHUB_NAME/firstimage
-
   - docker push ayman30/multi-client
   - docker push ayman30/multi-nginx
   - docker push ayman30/multi-server
@@ -27,7 +25,7 @@ deploy:
   provider: elasticbeanstalk
   region: us-east-2
   app: multi-docker
-  env: MultiDocker-env
+  env: Multidocker-env 
   bucket_name: elasticbeanstalk-us-east-2-756274986913
   bucket_path: docker-multi
   on:
